tests/unit/Core/Errors/SemanticTypeAssociatorErrorHandler/DifferentNumberOfArgumentsAndParameters.cs
namespace Paraminter.Associating.Semantic.Type.Apheleia.Errors;

using Paraminter.Associating.Semantic.Type.Apheleia.Errors.Commands;
using Paraminter.Cqs;

using Xunit;

public sealed class DifferentNumberOfArgumentsAndParameters
{
    private readonly IFixture Fixture = FixtureFactory.Create();

    [Fact]
    public void ReturnsHandler()
    {
        var result = Target();

        Assert.Same(Fixture.DifferentNumberOfArgumentsAndParametersMock.Object, result);
    }

    private ICommandHandler<IHandleDifferentNumberOfArgumentsAndParametersCommand> Target() => Fixture.Sut.DifferentNumberOfArgumentsAndParameters;
}
